fix thumbnail size on mobile devices
Having been enlarged for the Twitter media support the thumbnails are
now resized per css to match the screen width again.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -439,6 +439,12 @@ input {
         font-size:0.8em;
         white-space:nowrap;
     }
+
+        .entry-thumbnail img {
+            max-width:99%;
+            display: block;
+            margin: 0 10px 5px 0;
+        }
     
     .entry-content {
         display:none;
